added use of media plugin back

--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
         </div><!-- /header -->
     
         <div data-role="main" class="ui-content" >
-            <ul id="nearby-cats-list" data-role="listview" data-theme="c"></ul>
+            <ul id="nearby-cats-list" data-role="listview" data-theme="c">
+                <li>Warning: There is no data connection.</li>
+            </ul>
         </div><!-- /content -->
     
     </div><!-- /page -->
